# Glossy

./: .gitignore  CMakeLists.txt  README.md
include/glossy/: default_scene.hpp  entities.hpp  json2glsl.hpp  stopwatch.hpp  util.hpp  window.hpp
scenes/: diffuse.json  reflections.json  three_lights.json
src/: default_scene.cpp  entities.cpp  glossy.cpp  json2glsl.cpp  stopwatch.cpp  util.cpp  window.cpp
